flex and readability fix

--- a/src/Operators.css
+++ b/src/Operators.css
@@ -6,6 +6,10 @@
   padding: 20px;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
 .problem {
   font-size: 1.5rem;
 }
@@ -26,4 +30,21 @@ input {
 
 .inpercent {
   font-size: 1.3rem;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+button {
+  padding: 30px;
+  background-color: cornflowerblue;
+  color: whitesmoke;
+  font-weight: bolder;
+  text-shadow: 1px 1px black;
+  font-size: 1.3rem;
+  min-width: 300px;
 }
